to fix persistance of fullDaysOff